[package]
name = "rusty-journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"                                   # Flexible concrete Error type built on std::error::Error
home = "0.5.3"                # Shared definitions of home directories
structopt = "0.3.26"               # Parse command line argument by defining a struct.
serde_json = "1.0.81"                # A JSON serialization file format

[dependencies.chrono]
features = ["serde"] # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
version = "0.4.19"                   # Date and time library for Rust

[dependencies.serde]
features = ["derive"] # We'll need the derive feature
version = "1.0"